fix: gapping

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,7 +18,7 @@
 }
 .caption {
   text-align: right;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
   font-size: 11px;
 }
 
